@@ -1,7 +1,9 @@
 Gaim: The Pimpin' Penguin IM Clone thats good for the soul! 
 
 version 0.59.9
-	* Updated zh_TW.po file (thanks breeze833)
+	* Updated zh_TW.po file (Thanks breeze833)
+	* Fix an oscar bug that caused some messages from 
+	  AOL 8.0 to be dropped (Thanks Mark Doliner)
 
 version 0.59.8 (01/06/2003):
 	* Ripped out all gtk2 support (Thanks Nathan Walp).
